*** Changelog ***

= 8.4.0 - xxxx-xx-xx =
* Fix - Fixed fatal errors with subscription helper methods when subscriptions classes (from WooCommerce Subscriptions) are not available.
* Add - Add a new dismissible banner to promote Stripe products to the settings page.
* Fix - Hiding BNPL payment methods when the Stripe account country is not supported.
* Fix - Resolved checkout error with UPE when using test mode customer in live mode or vice versa.
* Fix - Handle checkbox type required fields correctly on the shortcode checkout when paying with Google Pay/Apple Pay.
* Tweak - Remove unused confirmation modal a capability properties.
* Fix - Resgister script on the checkout page only when the gateway is enabled.
* Tweak - Allow to enable/disable payment methods irrespective of currency requirement.
* Add - Include WeChat Pay as a payment method for stores using the updated checkout experience.
* Fix - Resolve invalid recurring shipping method errors when attempting to purchase multiple subscriptions with Apple Pay or Google Pay.
* Fix - Deprecation errors on PHP 8.2 caused by using the deprecated constant FILTER_SANITIZE_STRING.

= 8.3.0 - 2024-05-23 =
* Add - Add a new dismissible banner to promote Stripe products to the settings page.
* Add - Include Afterpay (Clearpay in the UK) as a payment method for stores using the updated checkout experience.
* Add - Include Affirm as a payment method for stores using the updated checkout experience.
* Add - Include Klarna as a payment method for stores using the updated checkout experience.
* Add - Additional information is displayed on the "Payment methods" page when listing co-branded credit cards.
* Fix - Resolved an error that could prevent purchasing subscriptions that have a capital letter in the billing period. eg "Year" instead of "year".
* Fix - The preferred card brand is used when paying with a co-branded credit card.