@@ -1,0 +1,12 @@
+import React from 'react';
+import styled from '@emotion/styled';
+import IconWithShell from '../styles/icon-with-shell';
+import icon from './icon.svg';
+
+const Wrapper = styled( IconWithShell )`
+	background: #00d650;
+`;
+
+const CashAppIcon = ( props ) => <Wrapper { ...props } src={ icon } />;
+
+export default CashAppIcon;
