@@ -15,6 +15,7 @@ import P24Icon from './p24';
 import BoletoIcon from './boleto';
 import OxxoIcon from './oxxo';
 import WechatPayIcon from './wechat-pay';
+import CashAppIcon from './cashapp';
 
 export default {
 	alipay: AlipayIcon,
@@ -34,4 +35,5 @@ export default {
 	boleto: BoletoIcon,
 	oxxo: OxxoIcon,
 	wechat_pay: WechatPayIcon,
+	cashapp: CashAppIcon,
 };
