@@ -13,6 +13,7 @@ export const PAYMENT_METHOD_NAME_KLARNA = 'stripe_klarna';
 export const PAYMENT_METHOD_NAME_AFFIRM = 'stripe_affirm';
 export const PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY = 'stripe_afterpay_clearpay';
 export const PAYMENT_METHOD_NAME_WECHAT_PAY = 'stripe_wechat_pay';
+export const PAYMENT_METHOD_NAME_CASHAPP = 'stripe_cashapp';
 
 export function getPaymentMethodsConstants() {
 	return {
@@ -31,6 +32,7 @@ export function getPaymentMethodsConstants() {
 		affirm: PAYMENT_METHOD_NAME_AFFIRM,
 		afterpay_clearpay: PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY,
 		wechat_pay: PAYMENT_METHOD_NAME_WECHAT_PAY,
+		cashapp: PAYMENT_METHOD_NAME_CASHAPP,
 	};
 }
 
