@@ -37,6 +37,7 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 		WC_Stripe_UPE_Payment_Method_Sofort::class,
 		WC_Stripe_UPE_Payment_Method_Link::class,
 		WC_Stripe_UPE_Payment_Method_Wechat_Pay::class,
+		WC_Stripe_UPE_Payment_Method_Cash_App_Pay::class,
 	];
 
 	/**
